# tgas

./: .gitignore  Cargo.toml  METRICS.md  README.md  base.py  conda_main.py  main.py  notes.md  prometheus-simple.yml  prometheus-updated.yml  prometheus.yml  script.py  seeds.txt  test_grpc_client.py  test_metrics.py  utils.py
_old/: seeds.txt  utils.py
_old/tgas/: __init__.py  base.py  det.py  sixgan.py  sixgen.py  sixgraph.py  sixtree.py  sixveclm.py
analyze/: Cargo.toml  base.py
analyze/src/: entropy_plugin.rs  lib.rs
analyze/src/analysis/: count.rs  dispersion.rs  entropy.rs  filter.rs  mod.rs  special.rs  statistics.rs  subnets.rs  unique.rs
analyze/src/analysis/predicates/: documentation.rs  eui64.rs  mod.rs  multicast.rs  protocols.rs  reserved.rs  special.rs  special_purpose.rs  transition.rs
analyze/src/formats/: ip_list.rs  mod.rs  scan_result.rs
cli/: Cargo.toml  build.rs  main.py  test_addresses.txt  test_grpc.rs
cli/proto/: ipv6kit.proto  rmap.proto
cli/runners/: base.py
cli/src/: analyze.rs  main.rs  runner.rs  sink.rs  source.rs  tga.rs
cli/src/frontends/: cli.rs  grpc.rs  mcp.rs  mod.rs
core/: plugin.py  registry.py
dataset/: base.py
ipv6kit/core/: registry.py
ipv6kit/dataset/: base.py
ipv6kit/runners/: docker_runner.py  local_runner.py
ipv6kit/scan/: __init__.py  base.py
ipv6kit/tga/: __init__.py  base.py  det.py  entropyip.py  gan.py  sixgan.py  sixgcvae.py  sixgen.py  sixscan.py  sixtree.py
plugin/: Cargo.toml
plugin/src/: contracts.rs  lib.rs  schemas.rs
probe/: Cargo.toml
probe/src/: icmp.rs  lib.rs  tcp.rs
python/: README.md  main.py
python/ipv6kit/analyze/: base.py
python/ipv6kit/core/: models.py  plugin.py  registry.py
python/ipv6kit/dataset/: base.py
python/ipv6kit/scan/zmap6/: base.py  icmp_echo.py  tcp_syn.py
python/ipv6kit/tga/: __init__.py  base.py  det.py  sixforest.py  sixgraph.py  sixveclm.py
python/rmap/analyze/: base.py
python/rmap/core/: __init__.py  models.py  plugin.py  registry.py
python/rmap/dataset/: base.py
python/rmap/runners/: base.py  docker_runner.py  local_runner.py
python/rmap/scan/: __init__.py  base.py
python/rmap/scan/zmap6/: base.py  icmp_echo.py  tcp_syn.py
python/rmap/tga/: __init__.py  base.py  det.py  entropyip.py  sixforest.py  sixgan.py  sixgcvae.py  sixgen.py  sixgraph.py  sixscan.py  sixtree.py  sixveclm.py
resource/: Cargo.toml
scan/: Cargo.toml  __init__.py  base.py
scan/src/: icmp6.rs  lib.rs  link_local.rs
scan/zmap6/: __init__.py  base.py  icmp_echo.py  tcp_syn.py
src/: main.rs  others.rs  scan.rs
tga/: Cargo.toml  README_LSTM.md  base.py
tga/python/: lstm_tga.py  tga_registry.py  tga_runner.py
tga/src/: entropy_ip.rs  lib.rs  python_tga.rs  random_ip.rs
tgas/: __init__.py  base.py  det.py  entropy.py  sixforest.py  sixgan.py  sixgcvae.py  sixgraph.py  sixscan.py  sixtree.py  sixveclm.py
view/: Cargo.toml
view/src/: lib.rs
xdp/: Cargo.toml
xdp/src/: lib.rs
