[workspace]
resolver = "3"
members = [
	"analyze",
	"cli",
	"plot",
	#"plugin",
	"scan",
	"tga",
	"view",
	# "xdp"
]

[workspace.dependencies]
anyhow        = "1"
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
inventory     = { version = "0.3" }
libloading    = "0.8"
clap = "4.5.39"
polars = { version = "0.48.1", features = ["lazy", "csv", "parquet"] }
