[package]
name = "analyze"
version = "0.1.0"
edition = "2024"

[dependencies]
hashbrown = "0.14"
polars = { workspace = true, features = ["lazy", "strings", "dtype-full"] }

plugin    = { path = "../plugin" }
anyhow        = { workspace = true }
clap          = { workspace = true }
inventory     = { workspace = true }
itertools = "0.12.1"
ipnet = "2.9.0"
indicatif = { version = "0.17.7", features = ["rayon"] }
rayon = "1.8"

[lib]
path = "src/lib.rs"
