[package]
name = "analyze"
version = "0.1.0"
edition = "2024"

[dependencies]
hashbrown = "0.14"
polars = { workspace = true, features = ["lazy", "strings"] }

plugin    = { path = "../plugin" }
anyhow        = { workspace = true }
clap          = { workspace = true }
inventory     = { workspace = true }
itertools = "0.12.1"
ipnet = "2.9.0"
indicatif = { version = "0.17.7", features = ["rayon"] }
rayon = "1.8"

# Tracing dependencies
tracing = "0.1"
tracing-indicatif = "0.3"

[lib]
path = "src/lib.rs"
