[package]
name = "ipv6kit"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
rand = "0.8"
ipnet = "2.9"
hickory-resolver = "0.24"
polars = { workspace = true, features = ["lazy", "csv", "parquet"]}
indicatif = { version = "0.17.7", features = ["rayon"]}
plugin    = { path = "../plugin" }
bincode = "1.3"

scan = { path = "../scan" }
tga = { path = "../tga" }
analyze = { path = "../analyze" }
view = { path = "../view" }
comfy-table = "7.1.4"
rayon = "1.10.0"

# gRPC dependencies
tonic = { version = "0.11", features = ["transport", "tls", "tls-roots", "tls-webpki-roots"] }
prost = "0.12"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-stream = "0.1"
futures = "0.3"

# Prometheus metrics
prometheus = "0.13"
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

[build-dependencies]
tonic-build = "0.11"
