[package]
name = "rmap"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { workspace = true, features = ["derive"] }
rand = "0.8"
ipnet = "2.9"
hickory-resolver = "0.24"
polars = { workspace = true, features = ["lazy", "csv"]}
indicatif = { version = "0.17.7", features = ["rayon"]}
plugin    = { path = "../plugin" }
bincode = "1.3"

# Tracing dependencies
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }
tracing-indicatif = "0.3"
time = { version = "0.3", features = ["macros", "formatting"] }

scan = { path = "../scan" }
tga = { path = "../tga" }
analyze = { path = "../analyze" }
view = { path = "../view" }
comfy-table = "7.1.4"
rayon = "1.10.0"

# gRPC dependencies
tonic = { version = "0.11", features = ["transport"] }
prost = "0.12"
tokio = { version = "1.0", features = ["rt", "sync", "time"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio-stream = "0.1"
futures = "0.3"

# Prometheus metrics
prometheus = "0.13"
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

[build-dependencies]
tonic-build = "0.11"
