[package]
name = "plugin"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow        = { workspace = true }
clap          = { workspace = true }
inventory     = { workspace = true }
polars        = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
libloading    = "0.8"

[lib]
crate-type = ["rlib"]     # lets dlopen'd .so files link cleanly
