[package]
name = "scan"
version = "0.1.0"
edition = "2024"

[dependencies]
probe = { path = "../probe" }
# clap = { workspace = true, features = ["derive"] }
# tokio = { version = "1.45.1", features = ["rt", "time"] }
futures = "0.3"
# async-trait = "0.1"
rand = "0.8"
ipnet = "2.11.0"
pnet = "0.35.0"
metrics = "0.21"
