[package]
name = "tga"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8.5"
serde.workspace = true
plugin = { path = "../plugin" }
erased-serde = "0.4.6"
typetag = "0.2.20"
inventory.workspace = true
bincode = "1.3"
tch = { version = "0.14", features = ["download-libtorch"] }
tempfile = "3.8"
hex = "0.4"
serde_json = "1.0"
